Install node-fetch module

--- a/package.json
+++ b/package.json
@@ -12,21 +12,22 @@
 		"watch": "node --env-file=.env --env-file=.env.development --watch index"
 	},
 	"dependencies": {
+		"bcrypt": "^5.1.1",
 		"compression": "^1.7.4",
+		"connect-mongo": "^5.1.0",
 		"debug": "~2.6.9",
 		"express": "~4.16.1",
 		"express-async-handler": "^1.2.0",
+		"express-session": "^1.18.0",
 		"express-validator": "^7.0.1",
 		"helmet": "^7.1.0",
 		"http-errors": "~1.6.3",
 		"mongoose": "^8.1.2",
 		"morgan": "~1.9.1",
-		"pug": "2.0.0-beta11",
-		"bcrypt": "^5.1.1",
-		"connect-mongo": "^5.1.0",
-		"express-session": "^1.18.0",
+		"node-fetch": "^2.7.0",
 		"passport": "^0.7.0",
-		"passport-local": "^1.0.0"
+		"passport-local": "^1.0.0",
+		"pug": "2.0.0-beta11"
 	},
 	"keywords": [],
 	"author": "",
