Add @flydotio/dockerfile module

--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
 	},
 	"keywords": [],
 	"author": "",
-	"license": "ISC"
+	"license": "ISC",
+	"devDependencies": {
+		"@flydotio/dockerfile": "^0.5.4"
+	}
 }
